微正则系综对经典理想气体的处理

--- a/ref.bib
+++ b/ref.bib
@@ -1,24 +1,39 @@
-@book{suyu,
-  author         = {苏禹},
-  editor         = {},
-  publisher      = {},
-  title          = {统计力学笔记},
-  year           = {2022}
-}
 @book{Pathria,
-  author         = {Pathria},
-  editor         = {},
-  publisher      = {高等教育出版社},
-  title          = {统计力学：第三版},
-  year           = {2017}
+  author         = {R.K. Pathria and Paul D. Beale},
+  title = {Statistical Mechanics (Fourth Edition)},
+  publisher      = {Academic Press},
+  edition = {Fourth Edition},
+  year           = {2022},
+}
+
+@book{problem,
+author = {Likharev, Konstantin K},
+title = {Statistical Mechanics: Problems with solutions},
+publisher = {IOP Publishing},
+year = {2019},
+series = {2053-2563},
+isbn = {978-0-7503-1419-0},
+abstract = {Essential Advanced Physics is a series comprising four parts:
+          Classical Mechanics, Classical Electrodynamics,
+          Quantum Mechanics and Statistical Mechanics. Each part
+        consists of two volumes, Lecture Notes and Problems with
+          Solutions, further supplemented by an additional collection of test problems and
+        solutions available to qualifying university instructors. This volume, Statistical
+          Mechanics: Problems with solutions contains detailed model solutions to the
+        exercise problems formulated in the companion Lecture Notes volume. In many
+        cases, the solutions include result discussions that enhance the lecture material. For
+        reader’s convenience, the problem assignments are reproduced in this volume.},
+url = {https://dx.doi.org/10.1088/2053-2563/aaf504},
+doi = {10.1088/2053-2563/aaf504}
 }
 @book{lan,
-  author         = {朗道},
+  author         = {L.D. LANDAU and E.M. LIFSHITZ},
   editor         = {},
-  publisher      = {高等教育出版社},
-  title          = {统计物理学I},
-  year           = {2011}
+  publisher      = {Butterworth-Heinemann},
+  title          = {Statistical Physics (Third Edition)},
+  year           = {1980}
 }
+
 @book{liang,
   author         = {梁昆淼},
   editor         = {},
@@ -31,6 +46,13 @@
   editor         = {},
   publisher      = {中国科学技术大学出版社},
   title          = {理论力学导论},
+  year           = {2022}
+}
+@book{suyu,
+  author         = {苏禹},
+  editor         = {},
+  publisher      = {},
+  title          = {统计力学笔记},
   year           = {2022}
 }
 @book{zheng,
