--- a/note_stat.tex
+++ b/note_stat.tex
@@ -207,7 +207,6 @@ pdfstartview = Fit
   \end{titlepage}
 
 
-
 \nocite{*}
 
 \tableofcontents
@@ -305,11 +304,13 @@ pdfstartview = Fit
     \ln \rho_a = \alpha_a + \beta E_a(q,p) + \gamma \cdot P_a(q,p) + \delta \cdot M_a (q,p)
 \end{equation}
 
-由此可见，可加性的运动积分的值完全确定了系统的统计性质，也就是说完全确定了它的任何子系统的统计分布，因而同时也确定了子系统的任意物理量的平均值。 \textcolor{RoyalBlue}{\textbf{\kaishu 正是这七个独立的可加运动积分代替了在用力学方法处理问题时所需要的多得不可想象的初始条件。}}
+总之，可加性的运动积分的值完全确定了系统的统计性质，也就是说完全确定了它的任何子系统的统计分布，因而同时也确定了子系统的任意物理量的平均值。 \textcolor{RoyalBlue}{\textbf{\kaishu 正是这七个独立的可加运动积分代替了在用力学方法处理问题时所需要的多得不可想象的初始条件。}}
 
 上面的讨论使得我们可以直接构造出一个适用于描述系统的统计性质的分布函数——既然不可相加的运动积分的值不会对系统的统计性质造成影响，那么任意函数 $\rho$ 只要它仅依赖于可加运动积分，并且满足刘维尔定理，就可以用来干这件事。
 
-此时，如果我们关注的是系统的某个稳定状态，那么自然而然地就要求 $\rho$ 不明显地依赖于时间——这就导致 $[\rho, H] = 0$。不妨假设函数 $\rho$ 对坐标 $(q,p)$ 的依存关系只是通过对哈密顿函数 $H(q,p)$ 来实现，即
+例如，我们总是可以通过设定合适的边界条件，或者选取合适的坐标系，使得系统的动量与角动量是一个固定的常数，从而可以合并为常数项 $\alpha_a$ 中。这样一来，密度分布函数就只依赖于系统的能量了。
+
+现在，如果我们关注的是系统的某个稳定状态，那么自然而然地就要求 $\rho$ 不明显地依赖于时间——这就导致 $[\rho, H] = 0$。不妨假设函数 $\rho$ 对坐标 $(q,p)$ 的依存关系只是通过对哈密顿函数 $H(q,p)$ 来实现，即
 \begin{equation}
     \rho(q,p) = \rho[H(q,p)]
 \end{equation} 
@@ -384,11 +385,11 @@ pdfstartview = Fit
 \end{equation}
 同时有
 \begin{equation}
-    d\ln \Omega = \left(\frac{\partial \ln \Omega}{\partial E}\right)_{V,N} dE + \left(\frac{\partial \ln \Omega}{\partial V}\right)_{N,E} dV - \left(\frac{\partial \ln \Omega}{\partial N}\right)_{E,V} dN
+    d\ln \Omega = \left(\frac{\partial \ln \Omega}{\partial E}\right)_{V,N} dE + \left(\frac{\partial \ln \Omega}{\partial V}\right)_{N,E} dV + \left(\frac{\partial \ln \Omega}{\partial N}\right)_{E,V} dN
 \end{equation}
 所以对应即可，比如
 \begin{equation}\label{eqn:thermo}
-    \beta = \frac{1}{kT} =  \left(\frac{\partial \ln \Omega}{\partial E}\right)_{V,N}
+    \beta = \frac{1}{kT} =  \left(\frac{\partial \ln \Omega}{\partial E}\right)_{V,N},\quad \eta  = \frac{P}{kT}  = \left(\frac{\partial \ln \Omega}{\partial V}\right)_{N,E},\quad \zeta = -\frac{\mu}{kT}  = \left(\frac{\partial \ln \Omega}{\partial N}\right)_{E,V}
 \end{equation}
 
 由于 $\Omega$ 是 $(N,V,E)$ 的函数，那么这些偏导数也是 $(N,V,E)$ 的函数。这样一来，根据这些等式(\ref*{eqn:thermo}) 我们就可以得到各种宏观状态参量之间的关系，也就爬到半山腰了。
@@ -397,10 +398,10 @@ pdfstartview = Fit
 
 \subsection{经典理想气体}
 
-作为一个爬山的例子，我们现在来推导经典理想气体所满足的理想气体状态方程以及能量均分定理：
+作为一个爬山的例子，我们现在来推导经典理想气体所满足的\textcolor{RoyalBlue}{\textbf{\kaishu 能量均分定理}} 和 \textcolor{RoyalBlue}{\textbf{\kaishu 理想气体状态方程}}：
 \begin{align*}
-    PV = nRT \\
-    E = \frac{3}{2} k_b T
+    PV = Nk_BT \\
+    E = \frac{3}{2}N k_B T
 \end{align*}
 
 \subsubsection{一些直觉}
@@ -426,37 +427,54 @@ pdfstartview = Fit
 
 考虑以 $a$ 为边长的三维势箱，若只有一个粒子：$N =1,V = a^3, E = \epsilon$ 。以下使用国际单位制考虑量级，是为了能够方便地看出某些项是否可以忽略。根据量子力学，系统的能级为
 \begin{equation}
-    \epsilon_{n_xn_yn_z} = \frac{\hbar}{8ma^2} (n_x^2 + n_y^2 + n_z^2), \quad n_x, n_y, n_z\in \mathbb{N}
+    \epsilon_{n_xn_yn_z} = \frac{h}{8ma^2} (n_x^2 + n_y^2 + n_z^2), \quad n_x, n_y, n_z\in \mathbb{N}
 \end{equation}
 很自然地定义三维态空间，系统的状态离散而均匀地分布于态空间中，如图 \ref{fig:taimidu} 所示。注意，所有的态只分布在一个卦限中，所以这里只有八分之一球体， \textcolor{RoyalBlue}{\textbf{\kaishu  而这个八分之一球体的体积则对应于能量小于一定值的态的个数}}。
 
-热力学上，我们从微观状态数 $\Omega$ 出发，可以计算系统的其他状态函数。由于我们这里考虑的是一个壳层内的状态，不妨使用 \textcolor{RoyalBlue}{\textbf{\kaishu 能态密度函数}} $\overline{\Omega}(E)$ 来代替之。为了计算 $\overline{\Omega}(E)$，我们通过计算累积能态数 $\Phi(E)$ ，然后再对 $E$ 求导即可。这件事和概率论中的累积分布函数和概率密度函数的关系很相似：
-\begin{equation}
-    \Phi(E) = \int_{0}^{E}\overline{\Omega}(E)\,\mathrm dE,\quad \overline{\Omega}(E) = \Phi'(E)
-\end{equation}
-稍加计算可得
-\begin{equation}
-    \overline{\Omega}(E) = \frac{1}{4}\pi \left(\frac{8ma^2}{\hbar^2} \right)^{3/2} \epsilon^{1/2} 
-\end{equation}
-
 如果系统中有 $N$ 个粒子，不考虑它们之间的相互作用，系统总能量应对 $3N$ 个自由度求和：
-\begin{equation}
-    \epsilon=\sum_{j=1}^{3 N} \epsilon_i=\frac{ \hbar^2}{8 m a^2} \sum_{j=1}^{3 N} n_j^2
+\begin{equation}\label{equ:qiu}
+    E = \sum_{j=1}^{3 N} \epsilon_i=\frac{ h^2}{8 m a^2} \sum_{j=1}^{3 N} n_j^2 \quad \Longrightarrow  \quad \sum_{j=1}^{3 N} n_j^2 = \frac{8ma^2}{h^2} E\equiv E^*
 \end{equation}
 
-此时，态空间为 $3N$ 维，$\Phi(E)$ 对应于 $3N$ 维球体的体积，其体积公式如下：
-
+我们要得到的微观配容数 $\Omega$ 就等于方程(\ref*{equ:qiu}) 落在 $(E-\frac{1}{2} \Delta E ,E+\frac{1}{2} \Delta E)$ 区间中的所有整数解。从理论上可以证明，这个数渐进地等于
+\begin{equation}\label{equ:lim}
+    \lim_{N\rightarrow \infty}\Omega = \frac{\partial \Sigma}{\partial E}\Delta E
+\end{equation}
+其中 $\Sigma$ 是能量小于 $E$ 所有能态的数量，而这个数量同时也渐进等于 $3N$ 维球体的体积！顺带一提，这件事和概率论中的累积分布函数和概率密度函数的关系很相似：
+\[
+    \Sigma(E) = \int_{0}^{E}\Omega(E)\,\mathrm dE,\quad \Omega(E) = \Sigma'(E)
+\]
+ $3N$ 维球体的体积由
 \begin{equation}
     V_{3 N}=\frac{\pi^{3 N / 2}}{\Gamma(3 N / 2+1)} R^{3 N}
 \end{equation}
-计算累计能态数时，注意需要除以 $2^{3N}$ 以及 $N!$，结果如下：
+确定，但是计算累计能态数时，注意需要除以卦限因子 $2^{3N}$ 和不可分辨因子 $N!$ ，带入 $E^*$ 则有
 \begin{equation}
-    \Phi(E)=\frac{1}{2^{3 N} N !} \frac{\pi^{3 N / 2}}{(3 N / 2) !}\left(\frac{2 m a^2 E}{\pi^2 \hbar^2}\right)^{3 N / 2}
+    \Sigma(E)= \left(\frac{V}{h^3} \right)^N \frac{(2\pi mE)^{3N/2}}{N!(3N/2)!} 
 \end{equation}
-由于 $\frac{3 N}{2}+1 \simeq \frac{3 N}{2}$，忽略掉求导时出来的常数因子，能态密度如下：
+取对数，引入斯特林公式近似 $\ln N! \simeq n\ln N - N$ 得到
+\begin{equation}\label{equ:lnN}
+    \ln N = N \ln\left[ \frac{V}{N h^3} \left(\frac{4\pi mE}{3N} \right)^{3/2}  \right] + \frac{5}{2} N
+\end{equation}
+故可以计算 $\Omega$ ：
+\begin{align*}
+    \because ~& \Omega = \frac{\partial \Sigma}{\partial E}\Delta E = e^{\ln \Sigma} \frac{\partial \ln\Sigma}{\partial E}\Delta E \\
+    \therefore~& \ln \Omega = \ln \Sigma + \ln\left(\frac{\partial \ln\Sigma}{\partial E}\Delta E\right) \\
+    ~& \ln \Omega = N \ln\left[ \frac{V}{N h^3} \left(\frac{4\pi mE}{3N} \right)^{3/2}  \right] + \frac{5}{2} N + \ln \frac{3}{2} N +\ln \frac{\Delta E}{E} 
+\end{align*}
+由于我们总是希望 $N\rightarrow \infty$ 所以后面两项和第一项相比总是可以忽略不计，所以能量分布在 $(E-\frac{1}{2} \Delta E ,E+\frac{1}{2} \Delta E)$ 之中的微观配容数可以写为
 \begin{equation}
-    \Omega(E)=\frac{1}{2^{3 N} N !} \frac{\pi^{3 N / 2}}{(3 N / 2) !}\left(\frac{8 m a^2}{\hbar^2}\right)^{3 N / 2} E^{3 N / 2-1}
+    \ln \Omega = N \ln\left[ \frac{V}{N h^3} \left(\frac{4\pi mE}{3N} \right)^{3/2}  \right] + \frac{5}{2} N 
 \end{equation}
+
+乍一看我们得到了一个看起来很奇怪的结果，即系统能量分布在 $E$ 附近的配容数竟然等于从 $0$ 开始一直数到 $E$ 的总和，但这的确是合理的，因为系统分布函数的增加速度是如此迅速，连前面所有的累积量都赶不上这一个小区间所造成的增长。同时我们也看到，\textcolor{RoyalBlue}{\textbf{\kaishu 如此庞大的数字，基本上可以将常用的任何量囫囵吞枣地吃掉。}} 
+
+还差一步。现在联用热力学基本公式，我们写出熵的表达式
+\[
+    S = k_B\ln \Omega = Nk_B \ln\left[ \frac{V}{N h^3} \left(\frac{4\pi mE}{3N} \right)^{3/2}  \right] + \frac{5}{2} N k_B
+\]
+与先前的结果进行对比，将 $S$ 分别对 $E,V$ 求导，再将导数和热力学公式对应，很容易就得到 $PV = Nk_B T$ 和 $E = \frac{3}{2}N k_BT$ ，我们也就爬到了半山腰。
+
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.6\textwidth]{taimidu.png}
@@ -467,23 +485,23 @@ pdfstartview = Fit
 \begin{justification}{\kaishu 反思与质疑}
     \kaishu \fontsize{11pt}{16pt}
     
-    \quad\quad 累计能态密度中需要除以的两个因子 $2^{3N}$ 以及 $N!$ 的原因分别是每个自由度只能取正整数，以及每个粒子不可分辨。由于理想气体空间上的稀薄导致的态占据、态分配上的稀薄，相同分子处于同一个态的几率很小，以至于可以忽略不计，所以不需要再添加一个组合因子。
+    \quad\quad 累计能态密度中需要除以的两个因子 $2^{3N}$ 以及 $N!$ 的原因分别是每个自由度只能取正整数，以及每个粒子不可分辨。并且由于理想气体空间上的稀薄导致的态占据、态分配上的稀薄，相同分子处于同一个态的几率很小，以至于可以忽略不计，所以不需要再添加一个组合因子。
 
     \quad\quad 那么为什么考虑 $3N$ 个自由度时应当除以 $N!$ 而不是 $(3N)!$ 呢？那是因为是这 $N$ 个粒子不可区分，而不是这 $3N$ 个自由度不可区分，对于每一个粒子来说， $x, y, z$ 都是可以区分的。
 
     \quad\quad 不过，对于不可分辨粒子设定的合理性，则需要追溯至吉布斯佯谬中来。若认为组成理想气体的各个粒子是可以标号的，首先便会导致推出的熵公式不满足加和性。其次，在考虑同种粒子在同一压强下的混合时，也会推出此时的混合熵正定的矛盾\cite{Pathria}。基于逻辑上的考虑，认为这些粒子具有全同性会使得我们的理论自洽。
 \end{justification}
 
-读者不妨以斯特林公式估计$\Omega$，以国际单位制，它的量级为 $10^{10^{23}}$，是一个非常庞大的数字， \textcolor{RoyalBlue}{\textbf{\kaishu 基本上可以将常用的任何数字不吐骨头地吃掉。}} 
+\begin{understanding}{\kaishu 对微正则系综的总结}
+\kaishu \fontsize{11pt}{16pt}
+    \begin{enumerate}
+        \item 微正则系综的核心是配容数 $\Omega$
+        \item 根据等概率假设，通过对微观态进行简单计数得到 $\Omega(N,V,E)$
+        \item $S = k_B \ln \Omega$
+        \item 联用热力学公式 $dS = \beta dE + \eta dV + \zeta dN$，偏导数对应相等
+    \end{enumerate}
 
-现在就可以计算系统的其他状态函数的值了：
-\begin{equation}
-    \ln \Omega=\frac{3 N}{2} \ln E+\ln \frac{\mathrm{d} E}{E}+N \ln V+f(V)
-\end{equation}
-根据之前的公式，可以分别从中得到 \textcolor{RoyalBlue}{\textbf{\kaishu 能量均分定理}} 和 \textcolor{RoyalBlue}{\textbf{\kaishu 理想气体状态方程}} 这两个实验上得到的准确结果。
-
-{\kaishu 注意，这里的推导是课上所讲，但我认为更好的、更有逻辑性和连贯性的导出方式应当是\cite{Pathria}第一章中对理想气体的处理，请读者一定要看一看。}
-
+\end{understanding}
 
 \section{正则系综}
 \textcolor{RoyalBlue}{\textbf{\kaishu 正则系综和微正则系综是等价的。}}
