finished the last few words of microcanonical ensemble

--- a/note_stat.tex
+++ b/note_stat.tex
@@ -233,7 +233,7 @@ pdfstartview = Fit
 
 总之，统计力学是作者本科以来最喜欢的一门理论课，它是一个关于“大”的理论。固然对“小”的研究也同样迷人（量子力学、第一性原理计算、单分子反应机理的探究等等），对这些细节的研究加深了我们对自然界的微观认识，使得我们对自然界究竟是怎样运转的有了更多的了解，甚至于在原子、电子、夸克尺度上让基本力服从我们的意志，但我仍然坚信： \textcolor{RoyalBlue}{\textbf{\kaishu More Is Different}}。具有巨大自由度数目的系统虽然系统与单一粒子遵循同样的力学规律，但是自由度的巨大却导致性质上的全新规律性。而这样的规律，是在微观层面意识不到的。
 
-不识庐山真面目，只缘身在此山中。进入大数据时代，甚至现在的 new bing 和 ChatGPT 所引领的大语言模型时代，科学界的主要矛盾也在变化。这是统计语言大放光彩的时代，也是科学发展的浪潮之巅。
+不识庐山真面目，只缘身在此山中。进入大数据时代，甚至现在的 new bing 和 ChatGPT 所引领的大语言模型时代，科学界的主要矛盾也在变化。这是统计语言大放光彩的时代，也是科技革命的浪潮之巅。
 
 统计力学将会爆发出的能量，我想是不言而喻的。
 
@@ -243,10 +243,10 @@ pdfstartview = Fit
 \section{系综理论的基本原理}
 
 经典力学通过相空间中的点 $(q,p)$ 来描述一个系统的某个状态。它们的演化满足正则方程
-\begin{align}
+\begin{align*}
     \dot{q_i} &= \frac{\partial H}{\partial p_i} \\
     \dot{p_i} &= -\frac{\partial H}{\partial q_i}
-\end{align}
+\end{align*}
 现在，我们想要考虑的不是一个状态，而是一大群状态——  \textcolor{RoyalBlue}{\textbf{\kaishu 在单一瞬间同时考虑大量系统，他们全部是给定系统的某种“思维复本”——其特性由与原系统一样的宏观态来表征，但极其自然地处在所有各种可能的微观态中}} \cite{Pathria}。
 
 所以，所谓系综是这样一个集合，它是相空间中满足所有约束条件（粒子位置有限、总能量有限）的一个区域——这里默认是连续的，因为一个宏观态统摄下的微观态是如此之多，以至于两个相邻微观态之间的间隔足够小。
@@ -497,10 +497,14 @@ pdfstartview = Fit
     \quad\quad 不过，对于不可分辨粒子设定的合理性，则需要追溯至吉布斯佯谬中来。若认为组成理想气体的各个粒子是可以标号的，首先便会导致推出的熵公式不满足加和性。其次，在考虑同种粒子在同一压强下的混合时，也会推出此时的混合熵正定的矛盾\cite{Pathria}。基于逻辑上的考虑，认为这些粒子具有全同性会使得我们的理论自洽。
 \end{justification}
 
+微正则系综以其简单的配容数世界观为基础，帮助我们爬上了统计力学的半山腰。但如果继续向峰巅攀爬将会变得困难，因为微正则系综是一个非常形而上的理论，它对优化参量 $(N,V,E)$ 准确度的要求让我们这些有限的生命望而却步——对于大多数物理系统来说，测量 $(N,V,E)$ 将是一个非常艰巨的任务，更不要说计算出 $\Omega(N,V,E)$ 。
+
+但微正则系综作为我们的理论起点，是值得肯定的，它是我们登山过程中的一条在山脊上延伸的小径。这里先对微正则系综研究方法进行一些总结，然后在下一节中，我们将换个方向——换到沿山谷的石板路上来。
+
 \begin{understanding}{\kaishu 对微正则系综的总结}
 \kaishu \fontsize{11pt}{16pt}
     \begin{enumerate}
-        \item 微正则系综的核心是配容数 $\Omega$
+        \item 微正则系综的核心量是配容数 $\Omega$
         \item 根据等概率假设，通过对微观态进行简单计数得到 $\Omega(N,V,E)$
         \item $S = k_B \ln \Omega$
         \item 联用热力学公式 $dS = \beta dE + \eta dV + \zeta dN$，偏导数对应相等
