--- a/note_stat.tex
+++ b/note_stat.tex
@@ -672,7 +672,53 @@ pdfstartview = Fit
 \]
 可见，随者粒子数 $N$ 的增长，它的量级是 $O(N^{1/2})$ ，所以我们期望：在 $N \rightarrow \infty$ 时，概率密度的展宽将逐渐减小。为了确认这一点，我们下面来直接研究 $E$ 的概率密度函数。
 
-\subsection{微观态与相空间}
+\subsection{配分函数的性质}
+
+自从正则系综被引入后，事情似乎变得简单了起来。现在，我们再次来到了起初使用微正则系综时所到达过的统计力学高峰的半山腰，可以停下休息，并回顾之前的上山路径了。在爬山的过程中，我们证明了微正则系综与正则系综实际上是对同一物理系统的两种等价表述。
+
+然而到目前为止，我们并没有提到系综理论与经典力学对一个系统状态的描述方式：相空间有什么紧密的联系——无论是对理想气体的推导还是正则系综的配分函数的计算过程，我们都只是默认了“求和遍及所有的微观态”这件事，而这些微观态是离散的。 \textcolor{RoyalBlue}{\textbf{\kaishu 那么这样的一个离散集合，与相空间中的点有什么联系呢？}}
+
+\subsubsection{微观态与相空间}
+
+很自然的，我们期望这样一件事情的发生： \textcolor{RoyalBlue}{\textbf{\kaishu 相空间中一定区域的体积对应于一个微观态，我们要找到“等效于一个微观态”的基本体积$\omega_0$。}}而事实也确实如此，只需要考虑这样一件事：系统代表点所占据的相空间体积为
+\begin{equation}
+    \omega=\int^{\prime} \ldots \int^{\prime}\left(d^{3 N} q d^{3 N} p\right)
+\end{equation}
+而积分区域是在能量 $E$ 的附近，所以
+\[
+    \iiint\limits_{(E-\Delta) \leq \sum_{i=1}^{3 N}\left(p_i^2 / 2 m\right) \leq E \quad 2 m} d^{3 N} p=\quad \iiint\limits_{(E-\Delta) \leq \sum_{i=1}^{3 N} y_i^2 \leq 2 m E
+    } d^{3 N} y
+\]
+换到球坐标系，容易看出这是 $3N$ 维球壳的体积，其结果为
+\[
+    \Delta\left(\frac{m}{2 E}\right)^{1 / 2}\left\{\frac{2 \pi^{3 N / 2}}{[(3 N / 2)-1] !}(2 m E)^{(3 N-1) / 2}\right\}
+\]
+由此得出
+\[
+    \omega \simeq \frac{\Delta}{E} V^N \frac{(2 \pi m E)^{3 N / 2}}{[(3 N / 2)-1] !}
+\]
+所以渐进的有
+\begin{equation}
+    (\omega / \Gamma)_{\text {asymp }} \equiv \omega_0=h^{3 N}
+\end{equation}
+更一般地说， \textcolor{RoyalBlue}{\textbf{\kaishu 倘若系统有 $\mathcal{N}$ 个自由度，则所期望的转换系数为 $\omega_0 = h^{\mathcal{N}}$ 。}}
+
+对于量子系统，由于不确定性原理，我们再也无法使用经典的相空间来描述系统的状态了——这看起来与我们“使用相空间中的一定区域来代表一个量子态”的想法不谋而合： \textcolor{RoyalBlue}{\textbf{\kaishu  在相空间任一点 $(q,p)$ 的周围，存在着一定的体积，在这个体积内不可能准确地确定代表点的位置。换句话说，这些相体积可以和系统的量子态一一对应。}}
+
+事实上，这就是 Bohr 氢原子模型中的角动量量子化条件，它发轫自经典力学的作用变量-角变量理论——周期运动的系统总是可以通过一定的正则变换，从而使得新哈密顿函数依赖于作用变量 $J$ 与角变量 $\Theta$ ：$H = H(J,\Theta)$ ，其中 $J$ 是守恒量，它的定义为
+\[
+    J = \frac{1}{2\pi} \oint p\mathrm{d}q
+\]
+环路积分的含义是针对一个周期。此时可以证明： $\Theta$ 则总是随着时间线性变化，并且在一个周期内的变化量为 $2\pi$ ：
+\[
+    \Theta = \Theta_0 + 2\pi \times \frac{t}{\tau} 
+\]
+而 Bohr 提出，周期运动的电子只能取一些分立的值作为作用变量。所以，这里“角动量的量子化”实际上是作用变量的量子化，只是为了让学界容易接受而使用角动量做了等价表述。所以，对于一维量子系统我们可以同样说明与一个量子态对应的“相空间体积”是 $\omega_0 = 2\pi \hbar = h$ 。
+
+现在，我们发现自己处于这样一种境地： \textcolor{RoyalBlue}{\textbf{\kaishu 既然相空间中确定的体积对应于一个微观态，那么对微观态的求和则可以转化为对正则变量 $(q,p)$ 的积分，而且这个转换系数是常数！}}这无疑会为计算正则配分函数提供一种新的视角和随之而来的新方法。作为一个有意义的暗示，如果我们能对系统哈密顿量进行变量分离，那么对相空间的积分也会是变量分离的。
+
+
+\subsubsection{无关联系统的配分函数}
 
 \subsection{位力定理}
 
